commit to master

--- a/4_klasa/agencja.css
+++ b/4_klasa/agencja.css
@@ -21,3 +21,18 @@ footer
 {
     width: 60%;
 }
+#obrazek
+{
+    width: 300px;
+    height: 120px;
+}
+section
+{
+    display: flex;
+    justify-content: space-between;
+}
+
+article div
+{
+    background-color: powderblue;
+}
