commit to master

--- a/4_klasa/21.09.17/agencja.css
+++ b/4_klasa/21.09.17/agencja.css
@@ -36,3 +36,9 @@ article div
 {
     background-color: powderblue;
 }
+h2 img
+{
+    display: flex;
+    justify-content: space-between;
+    height: 3px;
+}
