--- a/4_klasa/21.10.08/styl2.css
+++ b/4_klasa/21.10.08/styl2.css
@@ -1,8 +1,65 @@
+body
+{
+    font-family: Georgia;
+}
+
+header
+{
+    background-color: #824555;
+    color: white;
+    text-align: center;
+    padding: 20px;
+}
+section
+{
+    display: flex;
+}
+section div
+{
+    background-color: #A26475;
+    color: white;
+    width: 30%;
+    height: 300px;
+}
+
+section img
+{
+    background-color: #A26475;
+    color: white;
+    width: 40%;
+    height: 300px;
+    text-align: left;
+}
+
+main
+{
+    background-color: #F0EAE2;
+    padding: 50px;
+}
+
+footer
+{
+    background-color: #824555;
+    color: white;
+    text-align: center;
+    padding: 20px;
+}
+
 th,
 td,
 table {
-    border-width: 1px;
-    border-color: black;
+    border-width: 2px;
+    border-color: #69293A;
     border-style: solid;
     border-collapse: collapse;
+    padding: 7px;
 }
+
+ul
+{
+    list-style-type: square;
+}
+
+#red1{background-color: red;}
+#blue1{background-color: blue;}
+#green1{background-color: green;}
